--- a/index.html
+++ b/index.html
@@ -9,12 +9,40 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Google</h1>
+        <main>
+            <div class="container">
+                <h1 id="main-logo">
+                    <span style="color: #4A75E6">G</span>
+                    <span style="color: #EA2533">o</span>
+                    <span style="color: #FEBC1F">o</span>
+                    <span style="color: #4A75E6">g</span>
+                    <span style="color: #08AF22">l</span>
+                    <span style="color: #EA2533">e</span>
+                </h1>
 
-        <div id="search-bar"></div>
-
-        <a href="#" class="btn">Google Search</a>>
-        <a href="#" class="btn">I'm Feeling Lucky</a>>
-
+                <div id="search-bar"></div>
+                
+                <div class="btns">
+                    <a href="#" class="btn">Google Search</a>>
+                    <a href="#" class="btn">I'm Feeling Lucky</a>>
+                </div>
+            </main>
+        </div>
+        
     </body>
+    <footer>
+        <!-- right side -->
+        <ul class="footer-links">
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search Works</li>
+        </ul>
+
+        <!-- left side -->
+        <ul class="footer-links">
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Settings</li>
+        </ul>
+    </footer>
 </html>
